ECCI-uat-fixes: Resolves nav squashing issue with extra menu link

--- a/ecc_theme_intranet/css/disclosure-nav.css
+++ b/ecc_theme_intranet/css/disclosure-nav.css
@@ -40,7 +40,9 @@
   .disclosure-nav__toggle {
     border: 0;
     font-weight: 400;
+    font-size: 17px;
     margin-right: var(--spacing-smallest);
+    padding-right: var(--spacing-larger);
   }
 
   .disclosure-nav__toggle:hover {
@@ -55,7 +57,7 @@
 
   .disclosure-nav__toggle:focus,
   .disclosure-nav__toggle.active {
-    font-weight: 600;
+    text-shadow: 1px 0 0 var(--color-accent);
   }
 
   .disclosure-nav__toggle.active {
@@ -75,10 +77,23 @@
 
   .disclosure-nav__toggle::after {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='12' viewBox='0 0 18 12' fill='none'%3E%3Cpath d='M18.0075 2.40893C18.0081 2.65439 17.966 2.89691 17.8842 3.11868C17.8024 3.34046 17.6829 3.53584 17.5347 3.69048L9.86725 11.6262C9.63859 11.8679 9.35177 12 9.05578 12C8.75978 12 8.47297 11.8679 8.24431 11.6262L0.57688 3.41117C0.315911 3.13228 0.151797 2.73153 0.120642 2.29708C0.0894869 1.86262 0.193843 1.43005 0.410753 1.09452C0.627662 0.758987 0.939358 0.547985 1.27727 0.507929C1.61518 0.467873 1.95163 0.602043 2.2126 0.880925L9.06217 8.2252L15.9117 1.12738C16.0993 0.926466 16.3277 0.798841 16.57 0.759607C16.8122 0.720373 17.0581 0.77117 17.2786 0.905988C17.499 1.04081 17.6848 1.254 17.814 1.52035C17.9432 1.7867 18.0104 2.09506 18.0075 2.40893Z' fill='white'/%3E%3C/svg%3E");
+    background-size: 0.95rem;
     width: 1.25rem;
     height: 0.75rem;
     top: calc(50% - 0.375rem);
     transition: 0.25s ease;
+    right: 0.5rem;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .disclosure-nav__toggle {
+    padding: var(--spacing) 3rem var(--spacing) var(--spacing);
+    font-size: 18px;
+  }
+
+  .disclosure-nav__toggle::after {
+    background-size: 1rem;
     right: var(--spacing);
   }
 }
